# Invoice_Intelligence

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/core/: AppDependency.py  Enums.py  LoggingConfig.py
src/internal/auth/: handler.py  repository.py  service.py
src/internal/auth/models/: AuthCredentials.py  GoogleUserInfo.py
src/internal/gmail/: constant.py  handler.py  repository.py  service.py
src/internal/gmail/models/: GmailAttachment.py  GmailAttachmentDetail.py  GmailMessage.py  GmailWebhookResponse.py  UserEmailDetail.py
src/internal/gmail/services/: core_service.py  data_extraction_service.py  mail_service.py
src/internal/invoice/: service.py
src/internal/invoice/models/: InvoiceDetail.py  InvoiceExcelDetail.py  InvoiceValidation.py  PdfDetail.py  PdfPageDetail.py  PdfPageSummary.py
src/internal/invoice/services/: InvoiceDataFormatService.py
src/internal/platform/authentication/: Google.py  Scopes.py
src/internal/platform/config/: DatabaseSettings.py  GoogleSettings.py  LlmWhispererSettings.py  Settings.py
src/internal/platform/database/: Dependency.py  PostgresSQLSetup.py
src/internal/platform/database/models/: UserInDatabase.py
src/internal/platform/prompts/: ImageSummarizePrompt.py  InvoiceDataExtractionPrompt.py  InvoiceValidationPrompt.py
src/server/: main.py
