[project]
name = "invoice-intelligence"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.1",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.0",
    "google-auth-oauthlib>=1.3.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain-google-genai>=4.2.1",
    "llmwhisperer-client>=2.6.2",
    "msgspec>=0.20.0",
    "pdf2image>=1.17.0",
    "polars>=1.39.3",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2",
    "redis[hiredis]>=7.3.0",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
    "uuid7>=0.1.0",
    "uvicorn>=0.41.0",
    "xlsxwriter>=3.2.9",
]
